--- a/resume.tex
+++ b/resume.tex
@@ -29,8 +29,8 @@
     \end{itemize}
   \item \textbf{Roxbury Latin School}, West Roxbury, MA \\ 2001-2005,
     Graduated {\em Summa Cum Laude} June 2005 \\
-    GPA 4.0/4.0;
-    Received National Merit Scholar award, one of 2500 students nationwide.
+    GPA 4.0/4.0
+    % Received National Merit Scholar award, one of 2500 students nationwide.
 \end{itemize}
 
 \vspace*{-0.7cm}
@@ -86,7 +86,8 @@
         Implemented an optimizing compiler for a C-like language with a three-man team
       \item 6.170 {\em Laboratory in Software Engineering} Spring 2006 \\
         Designed and implemented a complex software system with a three-man team
-      \item 6.828 {\em Operating Systems Engineering} Fall 2006
+      \item 6.828 {\em Operating Systems Engineering} Fall 2006 \\
+        Implemented a minimal unix-style OS kernel and userspace
       \item 6.891 {\em Adventures in Advanced Symbolic Programming} Spring 2006
       % \item Participed in 2006 Maslab competition -- Programmed
       % autonomous vision-based robot, placing second out of 14 teams.
