--- a/resume.tex
+++ b/resume.tex
@@ -8,8 +8,8 @@
 \begin{center}
   {\LARGE \bf Nelson Elhage}\\
   {\large
-    259 Saint Paul Street \\
-    Brookline, MA 02446 \\
+    2 Worcester St. \\
+    Cambridge, MA 02139 \\
     (781) 929-7843 \\
     \mbox{\small \tt nelhage@mit.edu}}
 \end{center}
@@ -28,8 +28,7 @@
       \item Vice-Chairman, Student Information Processing Board
     \end{itemize}
   \item \textbf{Roxbury Latin School}, West Roxbury, MA \\ 2001-2005,
-    Graduated {\em Summa Cum Laude} June 2005 \\
-    GPA 4.0/4.0
+    Graduated {\em Summa Cum Laude} June 2005 with a 4.0 GPA
     % Received National Merit Scholar award, one of 2500 students nationwide.
 \end{itemize}
 
@@ -37,6 +36,10 @@
 \section*{Work experience}
 \vspace*{-0.2cm}
 \begin{itemize}
+  \item\textbf{VMware}, Palo Alto, CA \\
+    Summer 2008, Member of Technical Staff, Intern \\
+    Extended support for VMware's next-generation VM communication
+    infrastructure.
   \item\textbf{One Laptop Per Child}, Cambridge, MA \\
     Summer 2007, Software Developer (Intern) \\
     Worked on infrastructure web applications for laptop tracking and
@@ -88,7 +91,7 @@
         Designed and implemented a complex software system with a three-man team
       \item 6.828 {\em Operating Systems Engineering} Fall 2006 \\
         Implemented a minimal unix-style OS kernel and userspace
-      \item 6.891 {\em Adventures in Advanced Symbolic Programming} Spring 2006
+%      \item 6.891 {\em Adventures in Advanced Symbolic Programming} Spring 2006
       % \item Participed in 2006 Maslab competition -- Programmed
       % autonomous vision-based robot, placing second out of 14 teams.
   \end{itemize}
