Remove my phone #.

--- a/resume.tex
+++ b/resume.tex
@@ -10,7 +10,7 @@
   {\large
     2 Worcester St. \\
     Cambridge, MA 02139 \\
-    (781) 929-7843 \\
+%    (781) 929-7843 \\
     \mbox{\small \tt nelhage@mit.edu}}
 \end{center}
 
@@ -38,8 +38,8 @@
 \begin{itemize}
   \item\textbf{VMware}, Palo Alto, CA \\
     Summer 2008, Member of Technical Staff, Intern \\
-    Extended support for VMware's next-generation VM communication
-    infrastructure.
+    Extended support for VMware's next-generation virtual machine
+    communication infrastructure.
   \item\textbf{One Laptop Per Child}, Cambridge, MA \\
     Summer 2007, Software Developer (Intern) \\
     Worked on infrastructure web applications for laptop tracking and
@@ -86,9 +86,10 @@
   \begin{itemize}
       \item Teaching Assistant, 6.828 {\em Operating Systems Engineering}, Fall 2007
       \item 6.035 {\em Computer Language Engineering} Fall 2007 \\
-        Implemented an optimizing compiler for a C-like language with a three-man team
+        Implemented an optimizing, data-parallelizing, compiler for a
+        C-like language.
       \item 6.170 {\em Laboratory in Software Engineering} Spring 2006 \\
-        Designed and implemented a complex software system with a three-man team
+        Designed and implemented an Antichess engine, UI and AI with a three-man team
       \item 6.828 {\em Operating Systems Engineering} Fall 2006 \\
         Implemented a minimal unix-style OS kernel and userspace
 %      \item 6.891 {\em Adventures in Advanced Symbolic Programming} Spring 2006
@@ -100,8 +101,8 @@
 \section*{Skills}
 \vspace*{-0.2cm}
 \begin{itemize}
-  \item Programming languages: Proficient in Perl, Lisp/Scheme, Haskell,
-    C, Java, SQL, \LaTeX, CSS. Familiar with Python, C++, OCaml, R, PHP
+\item Programming languages: Proficient in Perl, C, Lisp/Scheme, Java,
+  Haskell, SQL, \LaTeX, CSS. Familiar with Python, C++, OCaml, R, PHP
 
   % \item Unix system administration -- bash command-line and scripting,
   %  Debian Linux, PostgreSQL, Apache, MySQL, Subversion, CVS
