Updated resume for google.

--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,7 @@
 \documentclass[letterpaper,10pt]{article}
 % \usepackage{fullpage}
 \usepackage[top=2cm,left=2cm,right=3cm,nohead,nofoot]{geometry}
+\usepackage[pdfborder={0 0 0}]{hyperref}
 \textheight=9in
 \pagestyle{empty}
 
@@ -8,24 +9,24 @@
 \begin{center}
   {\LARGE \bf Nelson Elhage}\\
   {\large
-    2 Worcester St. \\
+    283 3rd St Apartment 511 \\
     Cambridge, MA 02139 \\
 %    (781) 929-7843 \\
-    \mbox{\small \tt nelhage@mit.edu}}
+    \mbox{\url{nelhage@nelhage.com}}}
 \end{center}
 
 \section*{Education}
 \vspace*{-0.2cm}
 \begin{itemize}
   \item \textbf{Massachusetts Institute of Technology}, Cambridge, MA
-    \\ Candidate for Bachelor of Science degree in Electrical
+    \\ Bachelor of Science in Electrical
     Engineering and Computer Science, June 2009 \\
     GPA 4.9/5.0
     \vspace*{-0.2cm}
     \begin{itemize}
       \item Chairman, Educational Studies Program, a student-run
         high school outreach program, 2006-2007
-      \item Vice-Chairman, Student Information Processing Board
+      \item Chairman, Student Information Processing Board, 2009
     \end{itemize}
   \item \textbf{Roxbury Latin School}, West Roxbury, MA \\ 2001-2005,
     Graduated {\em Summa Cum Laude} June 2005 with a 4.0 GPA
@@ -36,14 +37,22 @@
 \section*{Work experience}
 \vspace*{-0.2cm}
 \begin{itemize}
+\item\textbf{Oracle}, Cambridge MA, August 2011-Present, Consulting Developer \\
+  \textbf{Ksplice}, Cambridge MA, June 2009-July 2011, Principal Engineer \\
+  Core developer on technology for creating and applying rebootless
+  updates to the Linux kernel. \\
+  Developed and maintained automated build and test infrastructure for
+  rebootless updates for thousands of kernel versions. \\
+  Developed and maintained infrastructure for distributing updates and
+  monitoring status on customer deployments.
   \item\textbf{VMware}, Palo Alto, CA \\
     Summer 2008, Member of Technical Staff, Intern \\
     Extended support for VMware's next-generation virtual machine
     communication infrastructure.
-  \item\textbf{One Laptop Per Child}, Cambridge, MA \\
-    Summer 2007, Software Developer (Intern) \\
-    Worked on infrastructure web applications for laptop tracking and
-    anti-theft system.
+%   \item\textbf{One Laptop Per Child}, Cambridge, MA \\
+%     Summer 2007, Software Developer (Intern) \\
+%     Worked on infrastructure web applications for laptop tracking and
+%     anti-theft system.
 %  \item \textbf{MIT Information Services \& Technology}, Cambridge, MA
 %    \\
 %    January, 2006, Software Developer \\
@@ -60,24 +69,27 @@
 %  \item Developed new GUI layer for lab projects
 %  \item Re-architected Sandscape codebase
 %    (http://tangible.media.mit.edu/projects/sandscape/).
-  \item \textbf{Geode Capital Management, LLC}, Boston, MA \\
-  Summer 2005, Software Developer (Intern) \\
-  Developed internal system to automate downloading and access of {\em
-    Yahoo! \textregistered News} headlines and electronic SEC
-  filings. Analyzed data using the R statistical programming language
+%   \item \textbf{Geode Capital Management, LLC}, Boston, MA \\
+%   Summer 2005, Software Developer (Intern) \\
+%   Developed internal system to automate downloading and access of {\em
+%     Yahoo! \textregistered News} headlines and electronic SEC
+%   filings. Analyzed data using the R statistical programming language
 \end{itemize}
 
 \vspace*{-0.7cm}
-\section*{General experience}
+\section*{Other Experience}
 \vspace*{-0.2cm}
 \begin{itemize}
-  \item \textbf{Open-Source projects} \\
+  \item \textbf{Other projects} \\
     \vspace*{-0.5cm}
     \begin{itemize}
-      \item Lead developer and maintainer of Barnowl IM client
-        (http://barnowl.mit.edu)
-      \item Former developer for Adium X (http://adiumx.com) and Growl
-        (http://growl.info).
+    \item Developed \url{http://livegrep.com}, providing real-time
+      interactive regular expression search over $>$450MB of source
+      code.
+    \item Lead developer and maintainer of Barnowl IM client
+      (http://barnowl.mit.edu)
+      % \item Former developer for Adium X (http://adiumx.com) and Growl
+      %   (http://growl.info).
       % \item Contributed significant patches to bitlbee
       %  (http://bitlbee.org)
     \end{itemize}
@@ -101,11 +113,16 @@
 \section*{Skills}
 \vspace*{-0.2cm}
 \begin{itemize}
-\item Programming languages: Proficient in Perl, C, Lisp/Scheme, Java,
-  Haskell, SQL, \LaTeX, CSS. Familiar with Python, C++, OCaml, R, PHP
+\item Programming languages: Comfortable with C, Python, Javascript, C++, bash scripting
+% \item Familiar with \LaTeX, HTML, CSS
+% \item Comfortable with UNIX system administration.
+  % Proficient in Perl, C, Lisp/Scheme, Java,
+  % Haskell, SQL, \LaTeX, CSS. Familiar with Python, C++, OCaml, R, PHP
 
   % \item Unix system administration -- bash command-line and scripting,
   %  Debian Linux, PostgreSQL, Apache, MySQL, Subversion, CVS
 \end{itemize}
+
+% TODO: Black Hat talk?
 
 \end{document}
