--- a/resume.tex
+++ b/resume.tex
@@ -9,7 +9,7 @@
 \begin{center}
   {\LARGE \bf Nelson Elhage}\\
   {\large
-    283 3rd St Apartment 511 \\
+    285 3rd St Apartment 511 \\
     Cambridge, MA 02139 \\
 %    (781) 929-7843 \\
     \mbox{\url{nelhage@nelhage.com}}}
@@ -38,7 +38,8 @@
 \vspace*{-0.2cm}
 \begin{itemize}
 \item\textbf{Oracle}, Cambridge MA, August 2011-Present, Consulting Developer \\
-  \textbf{Ksplice}, Cambridge MA, June 2009-July 2011, Principal Engineer \\
+  \textbf{Ksplice}, Cambridge MA, June 2009-July 2011, Employee #1, Principal Engineer \\
+  {\small(Ksplice was acquired by Oracle in July 2011)} \\
   Core developer on technology for creating and applying rebootless
   updates to the Linux kernel. \\
   Developed and maintained automated build and test infrastructure for
