Updates. Update Oracle title.

--- a/resume.tex
+++ b/resume.tex
@@ -37,15 +37,15 @@
 \section*{Work experience}
 \vspace*{-0.2cm}
 \begin{itemize}
-\item\textbf{Oracle}, Cambridge MA, August 2011-Present, Consulting Developer \\
-  \textbf{Ksplice}, Cambridge MA, June 2009-July 2011, Employee #1, Principal Engineer \\
+\item\textbf{Oracle}, Cambridge MA, August 2011-Present, Architect \\
+  \textbf{Ksplice}, Cambridge MA, June 2009-July 2011, Employee \#1, Principal Engineer \\
   {\small(Ksplice was acquired by Oracle in July 2011)} \\
   Core developer on technology for creating and applying rebootless
   updates to the Linux kernel. \\
   Developed and maintained automated build and test infrastructure for
-  rebootless updates for thousands of kernel versions. \\
-  Developed and maintained infrastructure for distributing updates and
-  monitoring status on customer deployments.
+  thousands of kernel versions. \\
+  Developed and maintained services to distribute updates and
+  monitor customer deployments.
   \item\textbf{VMware}, Palo Alto, CA \\
     Summer 2008, Member of Technical Staff, Intern \\
     Extended support for VMware's next-generation virtual machine
@@ -60,9 +60,8 @@
 %    Implemented Jabber support for the owl instant messenger client.
   \item \textbf{Best Practical Solutions}, Somerville, MA \\
     Summer 2006, Software Developer (Intern) \\
-    Developer for Hiveminder (http://hiveminder.com) and Jifty
-    (http://jifty.org), a new Perl framework for web applications.
-          
+    Developer for Hiveminder (\url{http://hiveminder.com}) and Jifty,
+    a Perl web application framework.
 %  \item \textbf{Tangible Media Group}, Media Lab, MIT \\
 %  Fall Term 2005, assistant system administrator and developer. \\
 %  Set up internal project server and disk array (Xen virtual
@@ -87,7 +86,7 @@
     \item Developed \url{http://livegrep.com}, providing real-time
       interactive regular expression search over $>$450MB of source
       code.
-    \item Lead developer and maintainer of Barnowl IM client
+    \item Developer and former lead maintainer of Barnowl IM client
       (http://barnowl.mit.edu)
       % \item Former developer for Adium X (http://adiumx.com) and Growl
       %   (http://growl.info).
@@ -99,7 +98,7 @@
   \begin{itemize}
       \item Teaching Assistant, 6.828 {\em Operating Systems Engineering}, Fall 2007
       \item 6.035 {\em Computer Language Engineering} Fall 2007 \\
-        Implemented an optimizing, data-parallelizing, compiler for a
+        Implemented an optimizing and data-parallelizing compiler for a
         C-like language.
       \item 6.170 {\em Laboratory in Software Engineering} Spring 2006 \\
         Designed and implemented an Antichess engine, UI and AI with a three-man team
@@ -114,7 +113,9 @@
 \section*{Skills}
 \vspace*{-0.2cm}
 \begin{itemize}
-\item Programming languages: Comfortable with C, Python, Javascript, C++, bash scripting
+\item Proficient in C, Python, Javascript, C++, bash scripting
+\item Familiar with Perl, HTML, CSS, Lisp/Scheme, Java, SQL, Haskell
+\item Comfortable with basic UNIX system administration.
 % \item Familiar with \LaTeX, HTML, CSS
 % \item Comfortable with UNIX system administration.
   % Proficient in Perl, C, Lisp/Scheme, Java,
