--- a/resume.tex
+++ b/resume.tex
@@ -9,10 +9,15 @@
 \begin{center}
   {\LARGE \bf Nelson Elhage}\\
   {\large
-    285 3rd St Apartment 511 \\
-    Cambridge, MA 02139 \\
+    Cambridge, MA \\
+%    285 3rd St Apartment 511 \\
+%    Cambridge, MA 02139 \\
 %    (781) 929-7843 \\
-    \mbox{\url{nelhage@nelhage.com}}}
+  }
+  781-929-7843 \\
+  \url{nelhage@nelhage.com} \\
+  Blog: \url{http://blog.nelhage.com/} \\
+  Github: \url{http://github.com/nelhage/}
 \end{center}
 
 \section*{Education}
@@ -23,11 +28,11 @@
     Engineering and Computer Science, June 2009 \\
     GPA 4.9/5.0
     \vspace*{-0.2cm}
-    \begin{itemize}
-      \item Chairman, Educational Studies Program, a student-run
-        high school outreach program, 2006-2007
-      \item Chairman, Student Information Processing Board, 2009
-    \end{itemize}
+%    \begin{itemize}
+%      \item Chairman, Educational Studies Program, a student-run
+%        high school outreach program, 2006-2007
+%      \item Chairman, Student Information Processing Board, 2009
+%    \end{itemize}
   \item \textbf{Roxbury Latin School}, West Roxbury, MA \\ 2001-2005,
     Graduated {\em Summa Cum Laude} June 2005 with a 4.0 GPA
     % Received National Merit Scholar award, one of 2500 students nationwide.
@@ -37,8 +42,8 @@
 \section*{Work experience}
 \vspace*{-0.2cm}
 \begin{itemize}
-\item\textbf{Oracle}, Cambridge MA, August 2011-Present, Architect \\
-  \textbf{Ksplice}, Cambridge MA, June 2009-July 2011, Employee \#1, Principal Engineer \\
+\item\textbf{Oracle}, Cambridge MA -- August 2011-present -- Architect \\
+  \textbf{Ksplice}, Cambridge MA -- June 2009-July 2011 -- Employee \#1, Principal Engineer \\
   {\small(Ksplice was acquired by Oracle in July 2011)} \\
   Core developer on technology for creating and applying rebootless
   updates to the Linux kernel. \\
@@ -46,8 +51,8 @@
   thousands of kernel versions. \\
   Developed and maintained services to distribute updates and
   monitor customer deployments.
-  \item\textbf{VMware}, Palo Alto, CA \\
-    Summer 2008, Member of Technical Staff, Intern \\
+  \item\textbf{VMware}, Palo Alto, CA --
+    Summer 2008 -- Member of Technical Staff, Intern \\
     Extended support for VMware's next-generation virtual machine
     communication infrastructure.
 %   \item\textbf{One Laptop Per Child}, Cambridge, MA \\
@@ -58,8 +63,8 @@
 %    \\
 %    January, 2006, Software Developer \\
 %    Implemented Jabber support for the owl instant messenger client.
-  \item \textbf{Best Practical Solutions}, Somerville, MA \\
-    Summer 2006, Software Developer (Intern) \\
+  \item \textbf{Best Practical Solutions}, Somerville, MA --
+    Summer 2006 -- Software Developer (Intern) \\
     Developer for Hiveminder (\url{http://hiveminder.com}) and Jifty,
     a Perl web application framework.
 %  \item \textbf{Tangible Media Group}, Media Lab, MIT \\
@@ -86,8 +91,15 @@
     \item Developed \url{http://livegrep.com}, providing real-time
       interactive regular expression search over $>$450MB of source
       code.
+    \item Developed Virtunoid, a proof-of-concept
+      guest$\rightarrow$host privilege escalation exploit against
+      KVM. Presented at Black Hat USA and Black Hat UAE
+      2011. (\url{http://github.com/nelhage/virtunoid})
+    \item bemu, a JIT compiler implementing the ``Beta'' CPU, a
+      fictional CPU used by several MIT
+      courses. (\url{http://github.com/nelhage/bemu})
     \item Developer and former lead maintainer of Barnowl IM client
-      (http://barnowl.mit.edu)
+      (\url{http://barnowl.mit.edu})
       % \item Former developer for Adium X (http://adiumx.com) and Growl
       %   (http://growl.info).
       % \item Contributed significant patches to bitlbee
@@ -100,8 +112,8 @@
       \item 6.035 {\em Computer Language Engineering} Fall 2007 \\
         Implemented an optimizing and data-parallelizing compiler for a
         C-like language.
-      \item 6.170 {\em Laboratory in Software Engineering} Spring 2006 \\
-        Designed and implemented an Antichess engine, UI and AI with a three-man team
+%      \item 6.170 {\em Laboratory in Software Engineering} Spring 2006 \\
+%        Designed and implemented an Antichess engine, UI and AI with a three-man team
       \item 6.828 {\em Operating Systems Engineering} Fall 2006 \\
         Implemented a minimal unix-style OS kernel and userspace
 %      \item 6.891 {\em Adventures in Advanced Symbolic Programming} Spring 2006
@@ -113,8 +125,8 @@
 \section*{Skills}
 \vspace*{-0.2cm}
 \begin{itemize}
-\item Proficient in C, Python, Javascript, C++, bash scripting
-\item Familiar with Perl, HTML, CSS, Lisp/Scheme, Java, SQL, Haskell
+\item Proficient in C, Python, Javascript, C++
+\item Comfortable with Perl, HTML, CSS, Lisp/Scheme, Java, SQL, Haskell
 \item Comfortable with basic UNIX system administration.
 % \item Familiar with \LaTeX, HTML, CSS
 % \item Comfortable with UNIX system administration.
